--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
 agp = "8.5.1"
 kotlin = "1.9.22"
-coreKtx = "1.13.1"
+coreKtx = "1.14.0-alpha01"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.5"
-activityCompose = "1.9.2"
-composeBom = "2024.04.01"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+composeBom = "2024.10.01"
 hiltVersion = "2.48"
 kspVersion = "1.9.0-1.0.13"
-hiltComposeVersion = "1.0.0-alpha03"
-appcompat = "1.6.1"
-material = "1.10.0"
+hiltComposeVersion = "1.2.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 jetbrainsKotlinJvm = "1.9.0"
 roomVersion = "2.6.1"
 retrofitVersion = "2.9.0"
 okhttpVersion = "5.0.0-alpha.2"
 ktorVersion = "2.3.12"
 logbackVersion = "1.5.6"
-firebaseVersion = "33.3.0"
+firebaseVersion = "33.5.1"
 googleServices = "4.4.2"
-lifecycleVersion = "2.4.0"
+lifecycleVersion = "2.8.7"
 truthVersion = "1.1.3"
 mockkVersion = "1.13.5"
 turbineVersion = "0.7.0"
