--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,12 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Build APK
+      run: ./gradlew assembleRelease
+
+    - name: Upload APK as artifact
+      uses: actions/upload-artifact@v3
+      with:
+            name: app-release.apk
+            path: app/build/outputs/apk/release/app-release.apk
+    -
