--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
             name: app-release.apk
-            path: app/build/outputs/apk/release/app-release.apk
+            path: app/release/app-release.apk
