--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "testing" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "testing" ]
 
 jobs:
   build:
@@ -22,11 +22,12 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build APK
       run: ./gradlew assembleRelease
 
-    - name: Upload APK as artifact
-      uses: actions/upload-artifact@v3
-      with:
-            name: app-release.apk
-            path: app/build/outputs/apk/release/app-release.apk
+    - name: Run Unit Tests
+      run: ./gradlew test
+
+    - name: Run Instrumentation Tests
+      run: ./gradlew connectedAndroidTest
