Updated firebase pipeline

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -29,5 +29,6 @@ jobs:
     - name: Run Unit Tests
       run: ./gradlew test
 
-    - name: Run Instrumentation Tests
-      run: ./gradlew connectedAndroidTest
+    # Instrumentation tests
+    #- name: Run Instrumentation Tests
+    #  run: ./gradlew connectedAndroidTest
